# django-ex

./: manage.py  pyproject.toml  tailwind.config.js
config/: settings.py  urls.py
exsite/: asgi.py  settings.py  urls.py  wsgi.py
polls/: forms.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_remove_choice_votes_vote.py
polls/templates/polls/: detail.html  index.html  login.html  logout.html  results.html
static/src/: htmx.js  output.css
templates/: _base.html
templates/admin/: base_site.html
