[tool.poetry]
name = "django-ex"
version = "0.1.0"
description = ""
authors = ["odesen <17547700+odesen@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_ex"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
django-debug-toolbar = "^4.1.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
